Fix tab text alignment

--- a/src/input/css/styles/breeze/button.css
+++ b/src/input/css/styles/breeze/button.css
@@ -207,9 +207,7 @@ toolseparator {
 }
 
 tabbutton {
-    layout-alignment: content fill center 0;
-    text-alignment: content fill center 0;
-    icon-alignment: content end center 0;
+    icon-alignment: content start center 0;
     background-color: var(--window-background-color);
     &:checked
     {
@@ -249,6 +247,5 @@ tabbutton {
 }
 
 tabbar {
-    padding: var(--small-spacing);
     spacing: 0px;
 }
